--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@prisma/client": "^6.9.0",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "next": "15.3.3",
+    "next-auth": "5.0.0-beta.28",
     "pg": "^8.16.0",
     "postgres": "^3.4.7",
     "react": "^19.0.0",
@@ -29,6 +31,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
+    "prisma": "^6.9.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
