--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.9.0",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
