--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.6",
     "@heroicons/react": "^2.2.0",
-    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.9.0",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "next": "15.3.3",
-    "next-auth": "5.0.0-beta.28",
+    "next-auth": "^5.0.0-beta.28",
     "pg": "^8.16.0",
     "postgres": "^3.4.7",
     "react": "^19.0.0",
@@ -27,6 +27,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
