--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
       ]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/api/auth/[...nextauth]/route.ts.bak"],
   "exclude": ["node_modules"]
 }
