--- a/package.json
+++ b/package.json
@@ -2,16 +2,22 @@
   "name": "nextjs-base",
   "version": "0.1.0",
   "private": true,
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "prisma db seed"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.6",
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.9.0",
+    "@tinymce/tinymce-react": "^6.2.1",
+    "@vercel/blob": "^1.1.1",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "next": "15.3.3",
@@ -21,6 +27,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "use-debounce": "^10.0.5",
+    "uuid": "^11.1.0",
     "zod": "^3.25.64"
   },
   "devDependencies": {
@@ -31,10 +38,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "prisma": "^6.9.0",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
