--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,17 +13,25 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "types": ["next-auth"],
     "plugins": [
       {
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
       "@*": [
-        "./src/*"
+        "./src/*",
       ]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/api/auth/[...nextauth]/route.ts.bak"],
+  "include": [
+    "next-env.d.ts", 
+    "**/*.ts", "**/*.tsx", 
+    ".next/types/**/*.ts", 
+    "src/app/api/auth/[...nextauth]/route.ts.bak",
+    "src/types/**/*.ts", 
+    "src/middleware.ts.backup"  ],
   "exclude": ["node_modules"]
 }
