--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postgres": "^3.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tinymce": "^7.9.1",
     "use-debounce": "^10.0.5",
     "uuid": "^11.1.0",
     "zod": "^3.25.64"
