--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "next": "15.3.3",
-    "next-auth": "^5.0.0-beta.28",
+    "next-auth": "^4.24.11",
     "pg": "^8.16.0",
     "postgres": "^3.4.7",
     "react": "^19.0.0",
