--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
     "next-env.d.ts", 
     "**/*.ts", "**/*.tsx", 
     ".next/types/**/*.ts", 
-    "src/app/api/auth/[...nextauth]/route.ts.bak",
+    "src/app/api/auth/[...nextauth]/route.ts",
     "src/types/**/*.ts", 
     "src/middleware.ts.backup"  ],
   "exclude": ["node_modules"]
